<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetalhesClientes">

    <TextView
        android:id="@+id/textViewNome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:hint="@string/nome"
        android:ems="15"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textViewEmail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:hint="@string/e_mail"
        android:ems="15"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textViewCelular2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:textSize="20sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:hint="@string/contato_do_cliente"/>

    <TextView
        android:id="@+id/textViewCep2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:textSize="20sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:hint="@string/cep"/>

    <TextView
        android:id="@+id/textViewN2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:textSize="20sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:hint="@string/n"/>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        tools:srcCompat="@tools:sample/avatars"
        app:layout_constraintTop_toBottomOf="@+id/textViewN2" />

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="Editar"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnMaps"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="MAPS"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnVenda"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="Venda"
        android:textSize="24sp" />


</LinearLayout>



<!--
xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx

<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetalhesClientes">

    <TextView
        android:id="@+id/textViewNome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:hint="@string/nome"
        android:ems="15"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewEmail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:hint="@string/e_mail"
        android:ems="15"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textViewCelular2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:textSize="20sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:hint="@string/contato_do_cliente"/>

    <TextView
        android:id="@+id/textViewCep2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:textSize="20sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:hint="@string/cep"/>

    <TextView
        android:id="@+id/textViewN2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:textSize="20sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:hint="@string/n"/>

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="Editar"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnMaps"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="MAPS"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnVenda"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="Venda"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        tools:srcCompat="@tools:sample/avatars" />

</LinearLayout>


-->
